# code_analyzer

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  pytest.ini
docs/: api.md  ci_cd.md  comparative_analysis.md  installation.md  metrics_explanation.md  ml_analysis.md  usage.md
examples/: example_usage.py
models/: rollback_predictor.joblib
src/code_analyzer/: main.py
src/code_analyzer/analyzers/: __init__.py  base_analyzer.py  code_analyzer.py  duplication.py
src/code_analyzer/ml/: __init__.py  base_explainer.py  base_predictor.py  deployment_ml_system.py  incident_predictor.py  resource_predictor.py  rollback_predictor.py  window_predictor.py
src/code_analyzer/models/: __init__.py  metrics.py
src/code_analyzer/reporters/: __init__.py  pdf_generator.py
src/code_analyzer/reporters/templates/: report.tex
src/code_analyzer/utils/: __init__.py  git_utils.py
src/code_analyzer/web/: __init__.py  __main__.py  server.py
src/code_analyzer/web/static/: index.html
tests/: conftest.py  test_pdf_generator.py
tests/analyzers/: test_code_analyzer.py
tests/code_analyzer/: test_duplication.py
tests/ml/: test_deployment_ml_system.py  test_incident_predictor.py  test_ml_explainer.py  test_resource_predictor.py  test_rollback_predictor.py  test_window_predictor.py
tests/reporters/: test_pdf_generator.py
tests/utils/: test_git_utils.py
